--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  background: #7b4096;
+  background: linear-gradient(45deg, #630099, #000000);
   color: #e3e3e3;
   font-family: "Open Sans", sans-serif;
   overflow-x: hidden;
